force-app/main/default/objects/LiveChatTranscript/fields/Chat_Email__c.field-meta.xml
<CustomField>
    <fullName>Chat_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>