force-app/main/default/objects/LiveChatTranscript/fields/Chat_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Chat_First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>