force-app/main/default/objects/LiveChatTranscript/fields/Chat_Phone__c.field-meta.xml
<CustomField>
    <fullName>Chat_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>