force-app/main/default/objects/LiveChatTranscript/fields/Chat_Subject__c.field-meta.xml
<CustomField>
    <fullName>Chat_Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>